# runit

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  AGENT-3-SUMMARY.md  AGENT-4-COMPLETION-REPORT.md  AGENT-4-README.md  AGENT-6-COMPLETION-REPORT.md  AGENT-7-COMPLETION-REPORT.md  AGENT-7-SECRETS-IMPLEMENTATION.md  AGENT_9_README.md  ARCHITECTURE.md  BROWSER_TEST_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT_IMPLEMENTATION.md  CONTRIBUTING.md  DELIVERABLES.md  DESIGN-SYSTEM-REFERENCE.md  Dockerfile  FILES-CREATED.md  FILES_CREATED.md  FINAL_BROWSER_TEST_SUMMARY.md  FINAL_DEMO_RESULTS.md  FINOPS_IMPLEMENTATION_COMPLETE.md  LICENSE  MODAL-APP-OVERVIEW.md  MVP-WORKING-PROOF.md  PRODUCTION_UI_RESULTS.md  PRR.md  QUICKSTART.md  QUICK_START.md  README.md  README_SESSION_SUMMARY.md  ROADMAP.md  RUN_PAGE_IMPLEMENTATION.md  SECRETS-QUICK-START.md  SECRETS-VERIFICATION.md  SECURITY.md  (+36 more)
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  config.yml  dependabot.yml
.runit/: project.json
audit/: .env.example  AUDIT_REPORT.md  api_edge_cases.py  api_test_report.json  audit_report.txt  full_user_flow_test.py  product_audit.py  quick_verify.py  ui_ux_audit.py  user_flow_report.txt
docs/: COMPILATION_FIXES.md  DATABASE.md  DEVELOPMENT_SETUP.md  E2E_INTEGRATION_COMPLETE.md  EXECUTION_PROTOCOL.md  FINAL_TEST_STATUS.md  FIXES_APPLIED.md  HONEST_STATUS_WITH_PROOF.md  INTEGRATIONS.md  LAUNCH_FIRST_APP.md  LAUNCH_KIT.md  PHASE_1_COMPLETION_REPORT.md  PHASE_1_HONEST_ASSESSMENT.md  PHASE_2_ACTUAL_STATUS.md  PHASE_2_COMPLETE.md  PHASE_2_FINAL_STATUS.md  PHASE_2_QUICK_VALIDATION_RESULTS.md  PHASE_2_SUMMARY.md  PHASE_3_COMPLETE.md  (+16 more)
services/runner/: .dockerignore  AGENT-2-COMPLETION-REPORT.md  AGENT-2-README.md  Dockerfile  FILES-CREATED.md  README.md  docker_entrypoint.py  pyproject.toml  pytest.ini  test_modal_runtime.py  test_redaction.py
services/runner/MagicMock/Path()/4378965536/: main.py
services/runner/MagicMock/Path()/4402369440/: main.py
services/runner/MagicMock/Path()/4712639392/: main.py
services/runner/samples/bulk-processor/: README.md  main.py  requirements.txt
services/runner/samples/extract-company/: README.md  main.py  requirements.txt
services/runner/samples/hello-world/: main.py
services/runner/samples/image-analysis/: README.md  main.py  requirements.txt
services/runner/samples/opendraft/: README.md  main.py  requirements.txt
services/runner/sdk/: README.md  pyproject.toml  setup.py
services/runner/sdk/execution_layer/: __init__.py  artifacts.py  context.py
services/runner/sdk/runit/: __init__.py  _app.py  _storage.py  artifacts.py  context.py
services/runner/sdk/tests/: conftest.py  test_app.py  test_artifacts.py  test_context.py  test_storage.py
services/runner/src/: __init__.py  modal_app.py
services/runner/src/artifacts/: __init__.py  collector.py  storage.py
services/runner/src/context/: __init__.py  mounter.py
services/runner/src/errors/: __init__.py  taxonomy.py
services/runner/src/execute/: __init__.py  executor.py
services/runner/src/runit/: __init__.py  _app.py  _storage.py
services/runner/src/secrets/: injector.py
services/runner/src/security/: __init__.py  kms_client.py  redaction.py
services/runner/templates/ai-chatbot/: main.py  metadata.json
services/runner/templates/pdf-text-extractor/: main.py  metadata.json
services/runner/templates/web-scraper/: main.py  metadata.json
services/runner/test_app/: main.py
services/runner/tests/: conftest.py  test_context_mounter.py  test_sdk_context.py  test_secrets_injector.py
services/runner/tests/integration/: test_full_execution.py
services/runner/tests/unit/: test_collector.py  test_deps.py  test_executor.py  test_kms_client.py  test_kms_compat.py  test_modal_app.py  test_redaction.py  test_runit_storage.py  test_storage.py  test_taxonomy.py
(+324 files in other folders)
