[project]
name = "execution-layer-runner"
version = "0.1.0"
description = "Modal-based execution kernel for Execution Layer"
requires-python = ">=3.11"
dependencies = [
    "modal>=0.60.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.3.1",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W"]

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
]

[tool.coverage.report]
fail_under = 77
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
